change html placeholder

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -23,7 +23,7 @@
     <form action='/posts' method='post'>
       <input type='text' name='post[title]' placeholder='Title'><br><br>
     <textarea name='post[body]' placeholder='Type here..'></textarea><br><br>
-    <input type='text' name='tag[name]' placeholder='tag'><br><br>
+    <input type='text' name='tag[name]' placeholder='tag1, tag2, and more'><br><br>
       <div>
       <input type='submit' value='POST'>
     </div>
